Add lessons on smart pointers, concurrency, async programming, testing, modules, error handling, generics, collections, lifetimes, closures, and iterators
- Created lesson 10 on smart pointers with README, Rust code, and run script
- Created lesson 11 on concurrency with threads, message passing, and shared state
- Created lesson 12 on async programming using Tokio with README, Rust code, and run script
- Created lesson 13 on testing in Rust with README, Rust code, and run script
- Created lesson 14 on modules and crates with README, Rust code, and run script
- Added lesson 5 on error handling with README, Rust code, and run script
- Added lesson 6 on generics and traits with README, Rust code, and run script
- Added lesson 7 on collections with README, Rust code, and run script
- Added lesson 8 on lifetimes with README, Rust code, and run script
- Added lesson 9 on closures and iterators with README, Rust code, and run script

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 # macOS debug symbols
 *.dSYM
 
+# Cargo build artifacts
+target/
+
 lesson1/lesson1
 lesson2/lesson2
 lesson3/lesson3
 lesson4/lesson4
+lesson5/lesson5
+lesson6/lesson6
+lesson7/lesson7
+lesson8/lesson8
+lesson9/lesson9
+lesson10/lesson10
+lesson11/lesson11
